--- a/.github/workflows/conholdate_com_agent.yml
+++ b/.github/workflows/conholdate_com_agent.yml
@@ -65,6 +65,13 @@ jobs:
         ls -la output/kra/samples/keywords.xlsx
         echo "Keywords file prepared successfully"
 
+    - name: Clean up old blog folders
+      run: |
+        # Remove any existing blog folders to avoid confusion
+        echo "=== Cleaning up old blog folders ==="
+        find output/blogs -type d -name "20??-??-??-*" -exec rm -rf {} + 2>/dev/null || true
+        echo "✅ Cleanup completed"
+
     - name: Remove any .env files that could interfere
       run: |
         find . -name ".env" -type f -delete
@@ -94,36 +101,51 @@ jobs:
         echo ".env file created"
 
     - name: Generate Blog
+      id: generate_blog
       run: |
         cd agent_engine
-        python main.py --topic "${{ inputs.topic }}" --product "${{ inputs.product }}" --platform "${{ inputs.platform }}" --keyword_source "${{ inputs.keyword_source }}" --brand "conholdate.com" --author "${{ inputs.author }}"
+        echo "=== Starting blog generation ==="
+        echo "Brand: conholdate.com"
+        echo "Product: ${{ inputs.product }}"
+        echo "Platform: ${{ inputs.platform }}"
+        echo "Topic: ${{ inputs.topic }}"
+        
+        python main.py \
+          --topic "${{ inputs.topic }}" \
+          --product "${{ inputs.product }}" \
+          --platform "${{ inputs.platform }}" \
+          --keyword_source "${{ inputs.keyword_source }}" \
+          --brand "conholdate.com" \
+          --author "${{ inputs.author }}"
+        
+        echo "✅ Blog generation completed"
 
     - name: Find generated blog folder
       id: find_blog
       run: |
         echo "=== Searching for generated blog folder ==="
         
-        # Search for folders matching the pattern YYYY-MM-DD-*
-        blog_folder=$(find . -type d -name "20??-??-??-*" -mmin -10 | head -1)
+        # Search specifically in brand directory
+        BRAND_DIR="output/blogs/conholdate_com"
         
-        if [ -z "$blog_folder" ]; then
-          echo " No blog folder found with pattern YYYY-MM-DD-*"
+        if [ ! -d "$BRAND_DIR" ]; then
+          echo "❌ Brand directory not found: $BRAND_DIR"
           exit 1
         fi
         
-        echo "Found blog folder: $blog_folder"
+        # Find the most recently created folder
+        blog_folder=$(find "$BRAND_DIR" -mindepth 1 -maxdepth 1 -type d -name "20??-??-??-*" -mmin -10 -printf '%T@ %p\n' | sort -nr | head -1 | cut -d' ' -f2-)
+        
+        if [ -z "$blog_folder" ]; then
+          echo "❌ No blog folder found in $BRAND_DIR"
+          exit 1
+        fi
+        
+        echo "✅ Found: $(basename $blog_folder)"
+        
         blog_folder_name=$(basename "$blog_folder")
         echo "blog_folder_name=$blog_folder_name" >> $GITHUB_OUTPUT
         echo "blog_folder_path=$blog_folder" >> $GITHUB_OUTPUT
-        
-        # Verify index.md exists
-        if [ ! -f "$blog_folder/index.md" ]; then
-          echo " index.md not found in $blog_folder"
-          exit 1
-        fi
-        
-        echo "✅ Found: $blog_folder_name with index.md"
-        ls -la "$blog_folder"
 
     - name: Extract product folder name
       id: product_folder
@@ -131,12 +153,27 @@ jobs:
         # Convert product name to lowercase and remove "Conholdate." prefix
         product_folder=$(echo "${{ inputs.product }}" | sed 's/Conholdate\.//g' | tr '[:upper:]' '[:lower:]')
         echo "product_folder=$product_folder" >> $GITHUB_OUTPUT
-        echo " Product folder name: $product_folder"
+        echo "✅ Product folder name: $product_folder"
+
+    - name: Verify blog content before upload
+      run: |
+        echo "=== Verifying blog content ==="
+        BLOG_PATH="${{ steps.find_blog.outputs.blog_folder_path }}"
+        
+        echo "Blog folder: $BLOG_PATH"
+        echo "Expected brand: conholdate.com"
+        
+        # Check frontmatter for brand indicators
+        if [ -f "$BLOG_PATH/index.md" ]; then
+          echo "--- Frontmatter excerpt ---"
+          head -20 "$BLOG_PATH/index.md"
+          echo "--- End excerpt ---"
+        fi
 
     - name: Upload Generated Blog as Artifact
       uses: actions/upload-artifact@v4
       with:
-        name: generated-blog-${{ github.run_number }}
+        name: generated-blog-conholdate-${{ github.run_number }}
         path: ${{ steps.find_blog.outputs.blog_folder_path }}
         if-no-files-found: error
 
@@ -155,22 +192,26 @@ jobs:
         git config --global user.name "GitHub Action"
 
         if [ -z "${{ secrets.REPO_PAT }}" ]; then
-          echo " REPO_PAT is EMPTY! Fix your repo secret."
+          echo "❌ REPO_PAT is EMPTY! Fix your repo secret."
           exit 1
         fi
 
         echo "Cloning conholdate-blog repo..."
         git clone https://x-access-token:${{ secrets.REPO_PAT }}@github.com/conholdate/conholdate-blog.git conholdate-blog || {
-          echo " Failed to clone repo — invalid PAT or wrong GitHub account."
+          echo "❌ Failed to clone repo — invalid PAT or wrong GitHub account."
           exit 1
         }
 
         cd conholdate-blog
         
+        # Ensure we're on the correct base branch
+        git checkout main
+        git pull origin main
+        
         # Create the target directory structure if it doesn't exist
         TARGET_DIR="content/Conholdate.Total/total"
         mkdir -p "$TARGET_DIR"
-        echo " Target directory: $TARGET_DIR"
+        echo "✅ Target directory: $TARGET_DIR"
         
         # Create a new branch for this blog post
         BRANCH_NAME="blog/total/$BLOG_FOLDER_NAME"
@@ -184,16 +225,38 @@ jobs:
         # Delete local branch if it exists
         git branch -D "$BRANCH_NAME" 2>/dev/null || true
         
-        # Create fresh branch
-        git checkout -b "$BRANCH_NAME"
+        # Create fresh branch from main
+        git checkout -b "$BRANCH_NAME" main
         
         echo "Copying blog folder: $BLOG_FOLDER_NAME to $TARGET_DIR"
         
+        # Get absolute path to blog folder
+        BLOG_ABS_PATH=$(cd .. && pwd)/"$BLOG_FOLDER_PATH"
+        echo "Source path: $BLOG_ABS_PATH"
+        
+        # Verify source exists before copying
+        if [ ! -d "$BLOG_ABS_PATH" ]; then
+          echo "❌ Source blog folder does not exist: $BLOG_ABS_PATH"
+          exit 1
+        fi
+        
         # Copy the blog folder to the correct product directory
-        cp -r "../$BLOG_FOLDER_PATH" "$TARGET_DIR/" || {
-          echo " Failed to copy folder $BLOG_FOLDER_PATH"
+        cp -r "$BLOG_ABS_PATH" "$TARGET_DIR/" || {
+          echo "❌ Failed to copy folder from $BLOG_ABS_PATH to $TARGET_DIR"
           exit 1
         }
+        
+        # Verify the copy was successful
+        if [ ! -d "$TARGET_DIR/$BLOG_FOLDER_NAME" ]; then
+          echo "❌ Blog folder was not copied successfully"
+          echo "Target contents:"
+          ls -la "$TARGET_DIR"
+          exit 1
+        fi
+        
+        echo "✅ Blog folder copied successfully"
+        echo "=== Target folder contents ==="
+        ls -la "$TARGET_DIR/$BLOG_FOLDER_NAME"
         
         # Add only the new blog folder
         git add "$TARGET_DIR/$BLOG_FOLDER_NAME"
@@ -203,20 +266,34 @@ jobs:
         git status --short
         
         if git diff --staged --quiet; then
-          echo " No new files to commit"
+          echo "ℹ️  No new files to commit"
           exit 0
         fi
         
-        # Commit the changes
-        git commit -m "Add generated blog for ${{ inputs.product }}: ${{ inputs.topic }}"
+        # Show diff summary
+        echo "=== Commit summary ==="
+        git diff --staged --stat
         
-        # Push the branch (force push since we deleted and recreated)
-        git push -u origin "$BRANCH_NAME" --force || {
-          echo " Failed to push branch."
+        # Commit the changes
+        git commit -m "Add generated blog for ${{ inputs.product }}: ${{ inputs.topic }}" || {
+          echo "❌ Failed to commit changes"
           exit 1
         }
         
-        echo " Branch $BRANCH_NAME pushed successfully"
+        # Show last commit
+        echo "=== Last commit ==="
+        git log -1 --oneline
+        
+        # Push the branch (force push since we deleted and recreated)
+        git push -u origin "$BRANCH_NAME" --force || {
+          echo "❌ Failed to push branch."
+          exit 1
+        }
+        
+        echo "✅ Branch $BRANCH_NAME pushed successfully"
+        
+        # Wait for GitHub to process the push
+        sleep 2
         
         # Check if PR already exists for this branch
         EXISTING_PR=$(gh pr list --repo conholdate/conholdate-blog --head "$BRANCH_NAME" --json number --jq '.[0].number' 2>/dev/null || echo "")
@@ -241,6 +318,7 @@ jobs:
 
           **Generated by:** GitHub Actions (Run #${{ github.run_number }})
           **Workflow:** ${{ github.workflow }}
+          **Brand:** conholdate.com
 
           ---
 
@@ -252,9 +330,11 @@ jobs:
           - Location: \`content/Conholdate.Total/total/\`
 
           Please review and merge if the content looks good!" || {
-            echo " Failed to create pull request."
+            echo "❌ Failed to create pull request."
+            echo "Attempting to show branch diff..."
+            git log origin/main..$BRANCH_NAME --oneline
             exit 1
           }
           
-          echo " Pull request created successfully!"
+          echo "✅ Pull request created successfully!"
         fi
