--- a/.github/workflows/Content_gap_agent_aspose.yml
+++ b/.github/workflows/Content_gap_agent_aspose.yml
@@ -66,26 +66,60 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Configure Git credentials for private repos (PAT via x-access-token)
+      - name: Verify PAT can access required GitHub repos
         env:
           ASPOSE_BLOG_TOKEN: ${{ secrets.ASPOSE_BLOG_TOKEN }}
         run: |
           set -euo pipefail
 
-          if [ -z "${ASPOSE_BLOG_TOKEN}" ]; then
-            echo "ASPOSE_BLOG_TOKEN is empty or not available to this workflow run."
+          if [ -z "${ASPOSE_BLOG_TOKEN:-}" ]; then
+            echo "ASPOSE_BLOG_TOKEN is empty or not available to this run."
             exit 1
           fi
 
-          # Rewrite any https://github.com/... clone URL to include the token.
-          git config --global url."https://x-access-token:${ASPOSE_BLOG_TOKEN}@github.com/".insteadOf "https://github.com/"
-          git config --global url."https://x-access-token:${ASPOSE_BLOG_TOKEN}@github.com/".insteadOf "http://github.com/"
-          # If any tooling uses SSH-style urls, rewrite those too (optional, but helpful).
-          git config --global url."https://x-access-token:${ASPOSE_BLOG_TOKEN}@github.com/".insteadOf "git@github.com:"
+          echo "1) Checking via GitHub API (does not expose token)..."
+          check_repo_api () {
+            local repo="$1"
+            local code
+            code="$(curl -sS -o /dev/null -w "%{http_code}" \
+              -H "Authorization: Bearer ${ASPOSE_BLOG_TOKEN}" \
+              -H "X-GitHub-Api-Version: 2022-11-28" \
+              "https://api.github.com/repos/${repo}")"
+            echo "API access ${repo}: HTTP ${code}"
+            if [ "${code}" != "200" ]; then
+              echo "FAIL: Token cannot access ${repo}. (401=bad token, 404=no access/repo, 403=SSO/policy)"
+              exit 1
+            fi
+          }
 
-          # Fail fast instead of prompting (Actions runner is non-interactive).
-          git config --global core.askPass ""
-          git config --global credential.helper ""
+          # Add any repos your pipeline will clone
+          check_repo_api "Aspose/aspose-blog"
+          check_repo_api "aspose-cells/Aspose.Cells-Doc-md"
+          check_repo_api "aspose-cells/Aspose.Cells-API-References"
+          check_repo_api "aspose-cells/Aspose-Cells-Tutorials"
+
+          echo
+          echo "2) Checking via git (GIT_ASKPASS, token never in URL)..."
+          cat > /tmp/git-askpass.sh <<'EOF'
+          #!/usr/bin/env bash
+          # Git calls askpass for both username and password prompts.
+          case "$1" in
+            *Username*) echo "x-access-token" ;;
+            *Password*) echo "${ASPOSE_BLOG_TOKEN}" ;;
+            *) echo "${ASPOSE_BLOG_TOKEN}" ;;
+          esac
+          EOF
+              chmod +x /tmp/git-askpass.sh
+
+              export GIT_ASKPASS=/tmp/git-askpass.sh
+              export GIT_TERMINAL_PROMPT=0
+
+              # This validates Git protocol auth without cloning a full repo.
+              git ls-remote https://github.com/Aspose/aspose-blog.git HEAD >/dev/null
+              git ls-remote https://github.com/aspose-cells/Aspose.Cells-Doc-md.git HEAD >/dev/null
+
+              echo "PAT authentication checks passed."
+
 
       - name: Show git url rewrite rules (safe)
         run: |
